packages/ducktools-classbuilder/ducktools_classbuilder-0.9.1.tar.gz/ducktools_classbuilder-0.9.1/tests/prefab/shared/examples/fails/creation_5.py
from ducktools.classbuilder.prefab import prefab, attribute


@prefab
class Construct:
    x = attribute(default=12, default_factory=list)
